# trie_tree

./: .gitignore  Board.cpp  Board.hpp  CMakeLists.txt  Json.cpp  Json.hpp  Trie_tree.cpp  Trie_tree.h  config.json  fileReader.cpp  fileReader.hpp  main.cpp  slowa2.txt
test/: CMakeLists.txt  Trie_tree_test.cpp
